# tdsProject1

./: .env.example  LICENSE  README.md  app.py  pyproject.toml
aiTest/: __init__.py  curl.py  solve_quiz_question.py
