[project]
name = "tdsproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref>=3.11.0",
    "dotenv>=0.9.9",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "markdownify>=1.2.2",
    "pypdf>=6.3.0",
    "requests>=2.32.5",
    "selenium>=4.38.0",
    "uvicorn>=0.38.0",
    "webdriver-manager>=4.0.2",
]
