[project]
name = "tdsproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref>=3.11.0",
    "dotenv>=0.9.9",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "html5lib>=1.1",
    "jsonpath-ng>=1.7.0",
    "lxml>=6.0.2",
    "markdownify>=1.2.2",
    "matplotlib>=3.10.7",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pypdf>=6.3.0",
    "pytesseract>=0.3.13",
    "requests>=2.32.5",
    "selenium>=4.38.0",
    "uvicorn>=0.38.0",
    "webdriver-manager>=4.0.2",
]
